Fix alignment of items in body and location of header/footer

--- a/styles.css
+++ b/styles.css
@@ -2,10 +2,11 @@ body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: center;
+    align-items: center;
     margin: 0px;
     background-color: black;
-    min-height: 100vh;
+    height: 100vh;
 }
 
 .header {
@@ -19,6 +20,7 @@ body {
     color: white;
     margin: 0px 0px 16px;
     padding: 16px;
+    width: 100%;
 }
 
 #scoreboard,
@@ -73,7 +75,6 @@ button:active {
     margin: 16px;
     border-radius: 8px;
     background-color: rgb(82, 238, 82);
-    margin-top: auto;
 }
 
 #results {
@@ -97,10 +98,12 @@ button:active {
 
 .footer {
     margin-top: auto;
+    bottom: 0;
     text-align: center;
     align-items: center;
     font-size: 20px;
     color: #F9FAF8;
     background-color: #363131;
     margin: 30px 0px 0px 0px;
+    width: 100%;
 }
